--- a/redis-basic/appsettings.json
+++ b/redis-basic/appsettings.json
@@ -1,3 +1,3 @@
 {
-    "CacheConnection": "ContosoSportsAppSzk.redis.cache.windows.net:6380,password=+MOajwS3ur3d7KP6AdkrQ9GNdEQfjgsXyyDfMU6iEF0=,ssl=True,abortConnect=False"
+    "CacheConnection": "ContosoSportsAppRedisSzk.redis.cache.windows.net:6380,password=q6ve8LWRRnDRzCtTr7uZTxAU4tngJOWOK88RKI2Wp88=,ssl=True,abortConnect=False"
   }
