--- a/redis-basic/redis-basic.csproj
+++ b/redis-basic/redis-basic.csproj
@@ -3,11 +3,13 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>redis_basic</RootNamespace>
     <LangVersion>7.1</LangVersion> 
   </PropertyGroup>
 
   <ItemGroup>
+        <None Update="appsettings.json">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.5" />
     <PackageReference Include="StackExchange.Redis" Version="2.1.58" />
   </ItemGroup>
